// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`incarceration staff schema for 'US_ID' 'OFFICER6' 1`] = `
{
  "email": "test-officer-6@example.com",
  "givenNames": "Test",
  "id": "OFFICER6",
  "recordType": "incarcerationStaff",
  "stateCode": "US_ID",
  "surname": "Officer6",
}
`;

exports[`incarceration staff schema for 'US_ME' 'OFFICER5' 1`] = `
{
  "email": "test-officer-5@example.com",
  "givenNames": "Test",
  "id": "OFFICER5",
  "recordType": "incarcerationStaff",
  "stateCode": "US_ME",
  "surname": "Officer5",
}
`;

exports[`incarceration staff schema for 'US_MO' 'FACILITY1' 1`] = `
{
  "email": null,
  "givenNames": "Facility 1",
  "id": "FACILITY1",
  "recordType": "incarcerationStaff",
  "stateCode": "US_MO",
  "surname": "",
}
`;

exports[`incarceration staff schema for 'US_MO' 'OFFICER7' 1`] = `
{
  "email": "test-officer-7@example.com",
  "givenNames": "Test",
  "id": "OFFICER7",
  "recordType": "incarcerationStaff",
  "stateCode": "US_MO",
  "surname": "Officer7",
}
`;

exports[`incarceration staff schema for 'US_TN' 'OFFICER5' 1`] = `
{
  "email": "test-officer-5@example.com",
  "givenNames": "Test",
  "id": "OFFICER5",
  "recordType": "incarcerationStaff",
  "stateCode": "US_TN",
  "surname": "Officer5",
}
`;

exports[`supervision staff schema for 'US_CA' 'OFFICER1' 1`] = `
{
  "district": "DISTRICT 1",
  "email": "test-officer-1@example.com",
  "givenNames": "Test",
  "id": "OFFICER1",
  "recordType": "supervisionStaff",
  "stateCode": "US_CA",
  "supervisorExternalId": null,
  "surname": "Agent1",
}
`;

exports[`supervision staff schema for 'US_CA' 'OFFICER2' 1`] = `
{
  "district": "DISTRICT 1",
  "email": "test-officer-1@example.com",
  "givenNames": "Test",
  "id": "OFFICER2",
  "recordType": "supervisionStaff",
  "stateCode": "US_CA",
  "supervisorExternalId": null,
  "surname": "Agent2",
}
`;

exports[`supervision staff schema for 'US_ID' 'OFFICER4' 1`] = `
{
  "district": "DISTRICT 1",
  "email": "test-officer-4@example.com",
  "givenNames": "Test",
  "id": "OFFICER4",
  "recordType": "supervisionStaff",
  "stateCode": "US_ID",
  "supervisorExternalId": "SUPER847",
  "surname": "Officer4",
}
`;

exports[`supervision staff schema for 'US_ME' 'OFFICER8' 1`] = `
{
  "email": "test-officer-8@example.com",
  "givenNames": "Test",
  "id": "OFFICER8",
  "recordType": "supervisionStaff",
  "stateCode": "US_ME",
  "supervisorExternalId": null,
  "surname": "Officer8",
}
`;

exports[`supervision staff schema for 'US_MI' 'OFFICER8' 1`] = `
{
  "email": "test-officer-8@example.com",
  "givenNames": "Test",
  "id": "OFFICER8",
  "recordType": "supervisionStaff",
  "stateCode": "US_MI",
  "supervisorExternalId": "1290831",
  "surname": "Officer8",
}
`;

exports[`supervision staff schema for 'US_ND' 'OFFICER3' 1`] = `
{
  "district": "DISTRICT 1",
  "email": "test-officer-3@example.com",
  "givenNames": "Test",
  "id": "OFFICER3",
  "recordType": "supervisionStaff",
  "stateCode": "US_ND",
  "supervisorExternalId": null,
  "surname": "Officer3",
}
`;

exports[`supervision staff schema for 'US_OR' '271828' 1`] = `
{
  "email": null,
  "givenNames": "271828",
  "id": "271828",
  "recordType": "supervisionStaff",
  "stateCode": "US_OR",
  "supervisorExternalId": null,
  "surname": "271828",
}
`;

exports[`supervision staff schema for 'US_OR' '314159' 1`] = `
{
  "email": null,
  "givenNames": "314159",
  "id": "314159",
  "recordType": "supervisionStaff",
  "stateCode": "US_OR",
  "supervisorExternalId": "SUPER221",
  "surname": "314159",
}
`;

exports[`supervision staff schema for 'US_PA' 'OFFICER1' 1`] = `
{
  "email": "test-officer@example.com",
  "givenNames": "TEST",
  "id": "OFFICER1",
  "recordType": "supervisionStaff",
  "stateCode": "US_PA",
  "supervisorExternalId": "25-1239123A",
  "surname": "OFFICER1",
}
`;

exports[`supervision staff schema for 'US_PA' 'OFFICER2' 1`] = `
{
  "email": "test-officer@example.com",
  "givenNames": "TEST",
  "id": "OFFICER2",
  "recordType": "supervisionStaff",
  "stateCode": "US_PA",
  "supervisorExternalId": null,
  "surname": "OFFICER2",
}
`;

exports[`supervision staff schema for 'US_TN' 'OFFICER1' 1`] = `
{
  "district": "DISTRICT 50",
  "email": "test-officer@example.com",
  "givenNames": "Test",
  "id": "OFFICER1",
  "recordType": "supervisionStaff",
  "stateCode": "US_TN",
  "supervisorExternalId": "SUPERVISOR1",
  "surname": "Officer1",
}
`;

exports[`supervision staff schema for 'US_TN' 'OFFICER2' 1`] = `
{
  "district": "DISTRICT 50",
  "email": null,
  "givenNames": "Test",
  "id": "OFFICER2",
  "recordType": "supervisionStaff",
  "stateCode": "US_TN",
  "supervisorExternalId": "SUPERVISOR1",
  "surname": "Officer2",
}
`;

exports[`supervision staff schema for 'US_TN' 'OFFICER3' 1`] = `
{
  "district": "DISTRICT 50",
  "email": null,
  "givenNames": "Test",
  "id": "OFFICER3",
  "recordType": "supervisionStaff",
  "stateCode": "US_TN",
  "supervisorExternalId": null,
  "surname": "Officer3",
}
`;

exports[`supervision staff schema for 'US_TN' 'SUPERVISOR1' 1`] = `
{
  "district": "DISTRICT 50",
  "email": "test-supervisor@example.com",
  "givenNames": "Test",
  "id": "SUPERVISOR1",
  "recordType": "supervisionStaff",
  "stateCode": "US_TN",
  "supervisorExternalId": null,
  "surname": "Supervisor",
}
`;
